# kognita

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/local_embedding_server/: README.md  server.py
examples/streamlit_app/: README.md  app.py
src/kognita/: __init__.py  chunking.py  config.py  core.py  exceptions.py  graph.py  query.py  storage.py  types.py
tests/: test_config.py  test_exceptions.py  test_imports.py  test_types.py
