[project]
name = "kognita"
version = "0.1.0"
description = "Upload a PDF. Extract entities and relationships. Explore the graph. Powered by Graphiti + Your Favourite LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core[anthropic,google-genai,groq,kuzu]>=0.8.0",
    "fastapi>=0.115.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.2",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.35.0",
    "streamlit-option-menu>=0.3.0",
    "uvicorn>=0.30.0",
]
